--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -19,7 +19,7 @@
     <!-- NAVBAR -->
     <div class="navbar">
       <a class="nav-title-link" href="../index.html">
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</span>
 
         <a class="button" href="mailto:samuelcarlisle@gmail.com">
           <span class="button-text">Contact Me</span>
