fixed filenames for images

--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -34,7 +34,7 @@
       <div id="project-header">
         <div class="main-title">Animachine</div>
         <div class="body-text">Simply by tweeting #animachine, media supporters triggered successive layers to be printed on a 3D printer that recreated the endangered animal. I was the lead engineer to design, test and build the hardware and software to realise this project. It was then installed as a display in Alexa Shopping Centre in central Berlin.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/animachine_4.jpeg">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -73,15 +73,15 @@
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_6.jpeg" class="gallery-image">
+              <img src="../assets/images/animachine_6.jpg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_7.jpeg" class="gallery-image">
+              <img src="../assets/images/animachine_7.jpg" class="gallery-image">
               <span class="image-caption">Cat-Ba Langur</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_8.jpeg" class="gallery-image">
+              <img src="../assets/images/animachine_8.jpg" class="gallery-image">
               <span class="image-caption">The 3d printed sculptures, modelled by artist Sam3, were auctioned with all proceeds donated towards Cat-Ba Langur conservation.</span>
             </div>
         </div>
