adding project collaborators and credits

--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -33,7 +33,7 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
         <div class="main-title">Animachine</div>
-        <div class="body-text">Simply by tweeting #animachine, media supporters triggered successive layers to be printed on a 3D printer that recreated the endangered animal. I was the lead engineer to design, test and build the hardware and software to realise this project. It was then installed as a display in Alexa Shopping Centre in central Berlin.</div>
+        <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team at Youin3D in Berlin to design, test and build the system and the code to realise this project. It was then installed as an interactive public display in the Alexa Shopping Centre in central Berlin. The other project parters were McCann Worldgroup Deutschland, Stiftung Artenschutz and their collaborators.</div>
         <image class="project-header-image" src="../assets/images/animachine_4.jpeg">
       </div>
 
