added some more project photos, screenshots and captions

--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -34,7 +34,7 @@
       <div id="project-header">
         <div class="main-title">Animachine</div>
         <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team at Youin3D in Berlin to design, test and build the system and the code to realise this project. It was then installed as an interactive public display in the Alexa Shopping Centre in central Berlin. The other project parters were McCann Worldgroup Deutschland, Stiftung Artenschutz and their collaborators.</div>
-        <image class="project-header-image" src="../assets/images/animachine_4.jpeg">
+        <image class="project-header-image" src="../assets/images/animachine.png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -83,6 +83,18 @@
             <div class="gallery-image-container half-width">
               <img src="../assets/images/animachine_8.jpg" class="gallery-image">
               <span class="image-caption">The 3d printed sculptures, modelled by artist Sam3, were auctioned with all proceeds donated towards Cat-Ba Langur conservation.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/animachine_9.png" class="gallery-image">
+              <span class="image-caption">Jan and I deploying/setting up the system in Alexa Shopping Centre, Berlin.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/animachine_10.png" class="gallery-image">
+              <span class="image-caption">Jan firing up the Python code I wrote to automate the control of the 3D printer and pause and resume printing based on watching for "#animachine" hashtags in tweets via the REST API from Twitter.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/animachine_11.png" class="gallery-image">
+              <span class="image-caption">Jan closing up the service panel hiding the computer, UPS (backup power supply), and UMTS modem.</span>
             </div>
         </div>
       </div>
