updated the text to explain a bit more about what we worked on

--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -33,7 +33,7 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
         <div class="main-title">Animachine</div>
-        <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team at Youin3D in Berlin to design, test and build the system and the code to realise this project. It was then installed as an interactive public display in the Alexa Shopping Centre in central Berlin. The other project parters were McCann Worldgroup Deutschland, Stiftung Artenschutz and their collaborators.</div>
+        <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team of hackers and nerds at Youin3D in Berlin to design, test and build the system and the code to realise this project. We started with a digital rendering of what the final project should look and what it should do from a creative briefing given to us by our project partners and the we rolled up our sleeves and did the detailed design i.e. the 'how' part. It was then installed as an interactive display in the Alexa Shopping Centre in central Berlin. Our project partners were McCann Worldgroup Deutschland, Stiftung Artenschutz and their respective collaborators.</div>
         <image class="project-header-image" src="../assets/images/animachine.png">
       </div>
 
