changed link from project card to ltfhc project and updated photo

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
               </a>
             </div>
             <div class="project-card">
-              <img src="./assets/images/ltfhc_1.jpeg" class="project-image">
+              <img src="./assets/images/20140724_153555.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">LTFHC Radio Communications Project</div>
                 <div class="body-text project-card-text">Solar Powered HF Radio Synchronised Healthcare Records System deployed in extremely remote locations around Lake Tanganyika.<n/div>
               </div>
-              <a class="button" href="./project-pages/project-animachine.html">
+              <a class="button" href="./project-pages/project-ltfhc.html">
                 <span class="button-text">Read More</span>
                 <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
               </a>
