updated photo href for occupy project card

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </a>
             </div>
             <div class="project-card">
-              <img src="./assets/images/occupy1_1.jpeg" class="project-image">
+              <img src="./assets/images/occupy_6.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Occupy London: Tech Team</div>
                 <div class="body-text project-card-text">Occupy London was a political movement in London.</div>
