--- a/project-pages/project-ltfhc.html
+++ b/project-pages/project-ltfhc.html
@@ -36,7 +36,7 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
         <div class="main-title">LTFHC Radio Communications Project</div>
-        <div class="body-text">Solar Powered HF Radio Synchronised Electronic Medical Records System deployed in extremely remote locations around Lake Tanganyika.</div>
+        <div class="body-text">Solar Powered HF Radio Synchronised Electronic Medical Records System built in Berlin and deployed in extremely remote locations around Lake Tanganyika.</div>
         <image class="project-header-image" src="../assets/images/20140724_153555.jpg">
       </div>
       <div id="project-details">
