changed the title and summary text from LTFHC to more descriptive Eletronic Medical Record

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             </div>
             <div class="project-card">
               <img src="./assets/images/20140724_153555.jpg" class="project-image">
-                <div class="subheader-text project-title">LTFHC Radio Communications Project</div>
-                <div class="body-text project-card-text">Solar Powered HF Radio Synchronised Healthcare Records System deployed in extremely remote locations around Lake Tanganyika.<n/div>
+                <div class="subheader-text project-title">Electronic Medical Records</div>
+                <div class="body-text project-card-text">Solar-Powered HF Radio-Synchronised Electronic Medical Records and Communication Network Deployed in 'extremely remote' Health Clinics and Hospitals around Lake Tanganyika.<n/div>
               </div>
               <a class="button" href="./project-pages/project-ltfhc.html">
                 <span class="button-text">Read More</span>
