added basic info about cryptoparty

--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
               </a>
             </div>
             <div class="project-card">
+              <img src="./assets/images/Cryptoparty.jpg" class="project-image">
+              <div class="project-card-text-container">
+                <div class="subheader-text project-title">Cryptoparty London</div>
+                <div class="body-text project-card-text">Grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public.</div>
+              </div>
+              <a class="button" href="./project-pages/project-buildingbanter.html">
+                <span class="button-text">Read More</span>
+                <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+              </a>
+            </div>            
+            <div class="project-card">
               <img src="./assets/images/XBee-2-mW.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Building Banter</div>
