fixed file extension

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </a>
             </div>
             <div class="project-card">
-              <img src="./assets/images/Cryptoparty.jpg" class="project-image">
+              <img src="./assets/images/Cryptoparty.png" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Cryptoparty London</div>
                 <div class="body-text project-card-text">Grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public.</div>
