light/dark theme var css and added poetry (writings) and started the readings section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" href="./assets/images/sam.jpg" />
 		<title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
-    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
+    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and a selection of my readings and writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -91,6 +91,28 @@
                 <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
               </a>
             </div>
+            <div class="project-card">
+              <img src="./assets/images/writings.jpg" class="project-image">
+              <div class="project-card-text-container">
+                <div class="subheader-text project-title">Writings</div>
+                <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind ( ( <3 ) )</div>
+              </div>
+              <a class="button" href="./project-pages/project-writings.html">
+                <span class="button-text">Read More</span>
+                <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+              </a>
+            </div>            
+            <div class="project-card">
+              <img src="./assets/images/readings.jpg" class="project-image">
+              <div class="project-card-text-container">
+                <div class="subheader-text project-title">Readings</div>
+                <div class="body-text project-card-text">The thoughts of others, encoded in words, are shared here</div>
+              </div>
+              <a class="button" href="./project-pages/project-readings.html">
+                <span class="button-text">Read More</span>
+                <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+              </a>
+            </div>            
             <div class="project-card">
               <img src="./assets/images/occupy_6.jpg" class="project-image">
               <div class="project-card-text-container">
