--- a/project-pages/project-cryptoparty.html
+++ b/project-pages/project-cryptoparty.html
@@ -34,8 +34,8 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
 
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="main-title">Cryptoparty</div>
+        <div class="body-text">A grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public. The project primarily consists of a series of free public workshops.</div>
         <image class="project-header-image" src="../assets/images/cryptoparty.jpeg">
       </div>
 
