--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -97,26 +97,38 @@ sleeping brothers         [ dreaming? ]
                   <div class="body-text">
                   <pre>
 Imperfection is the nature of form, otherwise all forms would be the same.		
-		
 To empathise with another being's suffering that suffering needs to be relatable.		
-		                    
-If difference can only be represented as identity, analogy, opposition or similitude, then representation reduces it to the difference between two elements, meaning it is reduced to a principle of comparison.		
-		
-Comparison is not only the thief of self-worth when we compare ourselves to other people but it could also be the basis on which we fail to appreciate the worth of an entity we find in nature, we are representing but not truly or fully observing it.		
-		
+If difference can only be represented as identity, analogy, opposition or similitude,
+then representation reduces it to the difference between two elements, meaning it is
+reduced to a principle of comparison. Comparison is not only the thief of self-worth 
+when we compare ourselves to other people but it could also be the basis on which
+we fail to appreciate the worth of an entity we find in nature, we are representing
+but not truly or fully observing it.		
 Our empathy might not be extended to the perceived entity for lack of our ability to relate to it.		
-		
-For example I bend down outside and pickup a rock and at first, having not looked very closely, I perceive that it has a weight and texture and form but I failed to perceive that it was in any way alive so therefore I did not represent it as living and by comparison with myself as a living being and in order to be able work out how I might feel towards the rock I might make the comparison: I am alive but the rock is not alive and since we are fundamentally different I do not feel any empathy towards it.		
-		
-Due to the limits of perception of the smallest entity that I can perceive using the human eye, for example what appears to me to be at first a dense smooth irregularly shaped but otherwise inert entity, under a magnification lens, becomes a surface on which an entire ecosystem exists, consisting of small plants, insects, algae, microfungi, bacteria, viruses.		
-		
-If the rock is wet, water being so fundamental to living processes, there is likely to be an even higher chance that life is present.		
-		
-The mere act of disturbing the rock from the original context where it was encountered might have destroyed or otherwise permanently altered the habitat of millions of microscopic beings that I cannot, without technological enhancement of my senses, perceive.		
-		
-Reflecting that the human body is made up of mostly water and bacteria and suppose after a mineral analysis I discover that the rock has some iron deposits inside it, iron being only made in the heart of stars above a certain size, then both the rock and I are children of the same type of star, which is to say we are made up of some of the same stardust, suddenly the rock itself and the entire context in which I found it take on a radically new significance: the type and degree of representations that I can make about increases so much that I feel a degree of empathy towards it accompanied by mutual tolerance and respect for the other living beings and how they came to be and be in that place.		
-		
-Why should I interfere? Certainly not because of our differing forms, relative sizes and subtle or more apparent natures!
+For example I bend down outside and pickup a rock and at first, having not looked very closely,
+I perceive that it has a weight and texture and form but I failed to perceive that it was
+in any way alive so therefore I did not represent it as living and by comparison with myself
+as a living being and in order to be able work out how I might feel towards the rock I might
+make the comparison: I am alive but the rock is not alive and since we are fundamentally different
+I do not feel any empathy towards it.		
+Due to the limits of perception of the smallest entity that I can perceive using the human eye,
+for example what appears to me to be at first a dense smooth irregularly shaped but otherwise
+inert entity, under a magnification lens, becomes a surface on which an entire ecosystem exists,
+consisting of small plants, insects, algae, microfungi, bacteria, viruses.		
+If the rock is wet, water being so fundamental to living processes, there is likely to be an even
+higher chance that life is present.		
+The mere act of disturbing the rock from the original context where it was encountered might have
+destroyed or otherwise permanently altered the habitat of millions of microscopic beings that I cannot,
+without technological enhancement of my senses, perceive.		
+Reflecting that the human body is made up of mostly water and bacteria and suppose after a mineral
+analysis I discover that the rock has some iron deposits inside it, iron being only made in the heart
+of stars above a certain size, then both the rock and I are children of the same type of star, which
+is to say we are made up of some of the same stardust, suddenly the rock itself and the entire context
+in which I found it take on a radically new significance: the type and degree of representations that
+I can make about increases so much that I feel a degree of empathy towards it accompanied by mutual tolerance
+and respect for the other living beings and how they came to be and be in that place.		
+Why should I interfere? Certainly not because of our differing forms,
+relative sizes and subtle or more apparent natures!
                     </pre>
                   </div>
                 </div>
@@ -127,8 +139,26 @@ Why should I interfere? Certainly not because of our differing forms, relative s
                 <div class="project-details-content">
                   <div class="body-text">
                   <pre>
-While there are many strategies (adaptations) in organisms and many niches in living systems, the intervowen tapesty of electron transfer through the metabolic pathways or chemical processes of each form, life and living systems interlock.		
-Where do humans fit in? We seem to keep chaging our minds. To all intents and purposes a city is a desert, a big clearing in the forest. In contrast, in a living ecosystem, like a forest, you need to understand the living systems around you to not damage them. For example after you have lived in a forest for a while, you understand that taking only the dead wood off the forest floor is like choosing to incinerate an entire insect and mycellium hotel, but you also might feel bad at hacking into a perfectly healthy living tree. So you are surrounded by trees but you cannot get any wood without destroying or killing. So you can wait, for example, for a large storm to shake and apply wind shear to the canopies of the trees and then there will be plenty of fallen branches and twigs that were 'ready' to be lost / are sacrificial from the point of view of the life cycle of the tree. Of course nothing is wasted in nature so taking the twigs rather than leaving them on the forest floor means you are denying some of the biomass to the soil which needs to constantly be fed in order to stay alive. Perhaps a compromise might be: after a storm and in order to clear the paths and ways that you already use to move through and around that forested area you can pick up all of the twigs and branches that are blocking the path. Obstructions to the path make it more unsafe to walk on in poor light conditions because you might trip on the branch, being conscious to leave other areas (off of the paths) completely undisturbed particularly that the life forms there can thrive and the soil remains uncompressed by the weight of your body acting through the small surface area of your foot. 'Walking lightly on the land' and indeed through life has a literal as well as a figurative meaning.
+While there are many strategies (adaptations) in organisms and many niches in living systems,
+the intervowen tapesty of electron transfer through the metabolic pathways or chemical processes of each form,
+life and living systems interlock.		
+Where do humans fit in? We seem to keep chaging our minds. To all intents and purposes a city is a desert,
+a big clearing in the forest. In contrast, in a living ecosystem, like a forest, you need to understand the
+living systems around you to not damage them. For example after you have lived in a forest for a while,
+you understand that taking only the dead wood off the forest floor is like choosing to incinerate an entire
+insect and mycellium hotel, but you also might feel bad at hacking into a perfectly healthy living tree.
+So you are surrounded by trees but you cannot get any wood without destroying or killing. So you can wait,
+for example, for a large storm to shake and apply wind shear to the canopies of the trees and then there will
+be plenty of fallen branches and twigs that were 'ready' to be lost / are sacrificial from the point of view
+of the life cycle of the tree. Of course nothing is wasted in nature so taking the twigs rather than leaving
+them on the forest floor means you are denying some of the biomass to the soil which needs to constantly be
+fed in order to stay alive. Perhaps a compromise might be: after a storm and in order to clear the paths and
+ways that you already use to move through and around that forested area you can pick up all of the twigs and
+branches that are blocking the path. Obstructions to the path make it more unsafe to walk on in poor light
+conditions because you might trip on the branch, being conscious to leave other areas (off of the paths)
+completely undisturbed particularly that the life forms there can thrive and the soil remains uncompressed
+by the weight of your body acting through the small surface area of your foot. 'Walking lightly on the land'
+and indeed through life has a literal as well as a figurative meaning.
                    </pre>		
                   </div>
                 </div>
