adding some saul williams references and quotes to writings, with a link to a video

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -268,7 +268,7 @@ wrote the books?
           Think like, they think like		
           They think like they book say...		
 
-  ...Truth is not a theory that can be imprisoned in any book		
+  ...Truth is not a theory that can be prisoned in any book		
   Word are sometimes. Prison sometimes prisms from the way you look"		
 
 So how to explain the heart, develop intuition or develop careful		
