--- a/project-pages/project-readings.html
+++ b/project-pages/project-readings.html
@@ -38,33 +38,56 @@
                 <div class="subheader-text">"It's Dark Because you are trying to hard"</div>
                 <div class="project-details-content">
                   <div class="body-text">
+<pre>
+“It’s dark because you are trying too hard.
+Lightly child, lightly. Learn to do everything lightly.
+Yes, feel lightly even though you’re feeling deeply.
+Just lightly let things happen and lightly cope with them.
 
-				 “It’s dark because you are trying too hard.
-				Lightly child, lightly. Learn to do everything lightly.
-				Yes, feel lightly even though you’re feeling deeply.
-				Just lightly let things happen and lightly cope with them.
+I was so preposterously serious in those days, such a humorless little prig.
+Lightly, lightly – it’s the best advice ever given me.
+When it comes to dying even. Nothing ponderous, or portentous, or emphatic.
+No rhetoric, no tremolos,
+no self conscious persona putting on its celebrated imitation of Christ
+or Little Nell.
+And of course, no theology, no metaphysics.
+Just the fact of dying and the fact of the clear light.
 
-				I was so preposterously serious in those days, such a humorless little prig.
-				Lightly, lightly – it’s the best advice ever given me.
-				When it comes to dying even. Nothing ponderous, or portentous, or emphatic.
-				No rhetoric, no tremolos,
-				no self conscious persona putting on its celebrated imitation of Christ
-				or Little Nell.
-				And of course, no theology, no metaphysics.
-				Just the fact of dying and the fact of the clear light.
+So throw away your baggage and go forward.
+There are quicksands all about you, sucking at your feet,
+trying to suck you down into fear and self-pity and despair.
+That’s why you must walk so lightly.
+Lightly my darling,
+on tiptoes and no luggage,
+not even a sponge bag,
+completely unencumbered.”
 
-				So throw away your baggage and go forward.
-				There are quicksands all about you, sucking at your feet,
-				trying to suck you down into fear and self-pity and despair.
-				That’s why you must walk so lightly.
-				Lightly my darling,
-				on tiptoes and no luggage,
-				not even a sponge bag,
-				completely unencumbered.”
-
-				― Aldous Huxley, Island
+― Aldous Huxley, Island
+</pre>
                   </div>
                 </div>
+
+                <div class="subheader-text">"Think Like They Book Say"</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+
+<pre>
+"They cannot imagine if they do not see it in a book
+Even when they see it it's their book that tell them how to look		
+
+		Think white them think straight		
+		Think like they book say		
+		Think like, they think like		
+		They think like they book say...		
+
+...Truth is not a theory that can be prisoned in any book		
+Word are sometimes. Prison sometimes prisms from the way you look"
+
+-- Saul Williams - <a target="_blank" href="https://www.youtube.com/watch?v=u1GIRi2c5ik">Think Like The Book Say</a>
+</pre>			
+                  </div>
+
+
               </div>
 
             <!-- FOOTER -->
