testing zsh functions to make using git a bit easier

--- a/project-pages/project-readings.html
+++ b/project-pages/project-readings.html
@@ -83,7 +83,7 @@ Even when they see it it's their book that tell them how to look
 ...Truth is not a theory that can be prisoned in any book		
 Word are sometimes. Prison sometimes prisms from the way you look"
 
--- Saul Williams - <a target="_blank" href="https://www.youtube.com/watch?v=u1GIRi2c5ik">Think Like The Book Say</a>
+-- Saul Williams - <a target="_blank" href="https://www.youtube.com/watch?v=u1GIRi2c5ik">Think Like They Book Say</a>
 </pre>			
                   </div>
 
