--- a/project-pages/project-cryptoparty.html
+++ b/project-pages/project-cryptoparty.html
@@ -6,7 +6,7 @@
 
      <link rel="icon" href="../assets/images/sam.jpg" />
      <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
-    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
+    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and a selection of my readings and writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
