profile image to 400px and scaleable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
         <div id="portfolio-header-image-container">
-          <img src="./assets/images/sam.jpg" class="portfolio-header-image">
+          <img src="./assets/images/sam.jpg" class="portfolio-header-image"
+          width="400px"
+          height="auto"
+          />
             <span class="image-caption">Sam in 2022</span>
         </div>
         <div id="portfolio-header-text-container">
