image resizing in css

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
         <div id="portfolio-header-image-container">
-          <img src="./assets/images/sam.jpg" class="portfolio-header-image"
-          width="400px"
-          height="auto"
-          />
+          <img src="./assets/images/sam.jpg" class="portfolio-header-image">
             <span class="image-caption">Sam in 2022</span>
         </div>
         <div id="portfolio-header-text-container">
@@ -50,7 +47,7 @@
         </div>
       </div>
       <div id="about-section">
-        <span class="subheader-text">My Background / About Me</span>
+        <span class="subheader-text">About Me</span>
         <div class="about-section-content">
           <div class="body-text"> I establish technical infrastructure and social patterns that enable collaboration and participation, facilitate and inspire teams, and create and promote the use of civic media and disruptive technologies — from 3D printers to etherpads to apps for direct action. I am the co-founder of Sukey, a platform to keep demonstrators safe, mobile, and informed. I founded OccupyLSX tech, and am a key contributor to Cryptoparty, founding CryptopartyLondon with some friends, and been known to go all-in on initiatives like Hurricane Hackers. I have also worked in industry with companies and for clients. Participating in whichever local Hackspace there is as I travel the world, I repair and hack everything I own, and help the others I meet to become empowered by and involved with hacker culture. I hold a BEng with honors from Durham University, and I am a member of the Institution of Engineering and Technology (IET).</div>
         </div>
@@ -98,7 +95,7 @@
               <img src="./assets/images/writings.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Writings</div>
-                <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind ( ( <3 ) )</div>
+                <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind.</div>
               </div>
               <a class="button" href="./project-pages/project-writings.html">
                 <span class="button-text">Read More</span>
