youtube embed full width and resizeable

--- a/project-pages/project-animachine.html
+++ b/project-pages/project-animachine.html
@@ -42,7 +42,9 @@
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
           <div class="body-text">Endangered species regularly feature in social media. Their plight inspires plenty of sympathy and outrage but, sadly, likes and shares have little effect in the real world. How, we asked, could the digital community make a real difference to the Cat-Ba Langur, one of the world’s most endangered species? It often appears in Social Media. There are only 53 left.</div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/bbCstKyHaF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div style="position:relative;padding-top:56.25%;">
+            <iframe src="https://www.youtube.com/embed/bbCstKyHaF4" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+          </div>
           <div class="body-text">#animachine actively engages supporters in literally collaborating to recreate the animal they are helping to save. This powerful visual evidence of their efforts then translates into cash, via auction, all of which is donated to the program dedicated to saving the Cat-Ba Langur. The engaging nature of the #animachine donation platform attracted crowds of supporters. They contributed the thousands of layers needed to build the statues. All of which helped grow awareness. And every cent raised on auction will help grow the Cat-Ba Langur population. #animachine let people reach out of the digital realm. And touch the real world, which made hashtags literally count in real life.
           </div>
         </div>
