formatted and trimmed the classic 4 text to make it more readable. 500px height for project image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 
 
-    <link rel="icon" href="./assets/images/sam.jpg" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
 		<title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and a selection of my readings and writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
