--- a/project-pages/project-classic4.html
+++ b/project-pages/project-classic4.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-     <link rel="icon" href="../assets/images/sam.jpg" />
+     <link rel="icon" href="../assets/images/favicon.ico" />
      <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,7 +43,40 @@
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
           <div class="body-text">As a Firmware Engineer working on the Classic 4 Electro Accupuncture/TENS treatment device I made various hardware and software contributions to improve UI / UX, increase the number of treatment modes and make it easier for users to control the device via the keypad. Mostly this consisted of embedded software development in CPP, C and PIC programming in assembly.</div>
-          <div class="body-text"> Here are some details about the device's capabilities, modes and features: Ability to treat different patterns with different electricity parameters. Capable of tonify one channel and sedate another channel at the same time. Acting concurrently as electro-acupuncture stimulator and TENS / MNS unit. Single Mode – the parameters of the four channels are independent of each other and controllable by the user. Paired Mode – The four channels are arranged in two pairs (CH1 & CH2) and (CH3 & CH4) and the pulse pairs are simultaneous to within 20 microseconds. Sync Mode – The four channels are synchronised in time and share the same parameters. Sequential Mode. Compact and Elegant design. Four output channels that can stimulate up to a total of eight needles, or four pairs of electrodes. A wide range of frequencies between 0.5 Hz and 200 Hz, in 24 pre-set settings. The outputs can be symmetrical biphasic or monophasic up to 60mA across a 1K resistive load, with an adjustable pulse width of 64, 128, 192 or 256 microseconds. The outputs is locked to 20mA by default for acupuncture stimulating. Channel short-circuits protection. Audio signals to indicate operational error and end of treatment. 25 Pre-set programmes. 8 user defined programmes (save/load slots). Large back-lit LCD screen 128 x 128 dots.</div>
+          <div class="body-text">
+<pre>
+Here are some details about the device's capabilities, modes and features:
+-Ability to treat different patterns with different electricity parameters.
+-Capable of tonify one channel and sedate another channel at the same time.
+-Acting concurrently as electro-acupuncture stimulator and TENS / MNS unit.
+
+Single Mode: the parameters of the four channels (outputs) are independent
+of each other and controllable by the user.
+
+Paired Mode: four channels are arranged in two pairs (CH1 & CH2)
+and (CH3 & CH4) and the pulses on each pair are simultaneous (+/-20 microseconds).
+
+Sync Mode: four channels are synchronised in time and share the same parameters.
+
+Sequential Mode: parameters programmatically change over the course of the treatment.
+
+Compact and Elegant design. Four output channels that can stimulate
+up to a total of eight needles, or four pairs of electrodes.
+
+A wide range of frequencies between 0.5 Hz and 200 Hz, in 24 pre-set settings.
+
+The outputs can be symmetrical biphasic or monophasic up to 60mA across a
+1K resistive load, with an adjustable pulse width of 64, 128, 192
+or 256 microseconds. The outputs is locked to 20mA by default for 
+acupuncture stimulating. Channel short-circuits protection.
+
+Audio signals to indicate operational error and end of treatment.
+
+25 Pre-set programmes. 8 user defined programmes (save/load slots).
+
+Large back-lit LCD screen 128 x 128 dots.
+</pre>
+</div>
         </div>
       </div>
 
