updated favicon uri across all files

--- a/project-pages/project-ltfhc.html
+++ b/project-pages/project-ltfhc.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-     <link rel="icon" href="../assets/images/sam.jpg" class="gallery-image">
+     <link rel="icon" href="assets/icons/favicon.ico" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>" />
      <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
