updated sukey photo

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -142,7 +142,7 @@ relative sizes and subtle or more apparent natures!
 While there are many strategies (adaptations) in organisms and many niches in living systems,
 the intervowen tapesty of electron transfer through the metabolic pathways or chemical processes of each form,
 life and living systems interlock.		
-Where do humans fit in? We seem to keep chaging our minds. To all intents and purposes a city is a desert,
+Where do humans fit in? We seem to keep changing our minds. To all intents and purposes a city is a desert,
 a big clearing in the forest. In contrast, in a living ecosystem, like a forest, you need to understand the
 living systems around you to not damage them. For example after you have lived in a forest for a while,
 you understand that taking only the dead wood off the forest floor is like choosing to incinerate an entire
