--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-     <link rel="icon" href="assets/icons/favicon.ico" />
+     <link rel="icon" href=../assets/icons/favicon.ico" />
      <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
