added moon release poem

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -353,6 +353,31 @@ because ideas are just more excuses to separate I from I.
                 </div>
               </div>
 
+
+              <div id="project-details">
+                <div class="subheader-text">Full Moon: Release</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+As we release what came before
+here shines a light that's bright and pure
+in present mind we are serene
+in the embrace of the moon's gleam
+we see, at last, what we had missed
+to understand is to forgive
+release, it's past, no changing it
+nothing as clear by day than now
+in dark of night and the moon's glow
+had we thought or had we felt
+as we do now we would have dealt
+much better with the problems that
+caused trouble with whom we had a spat
+goodbye dear problems you cannot stay
+just float and waft and fly away
+                    </pre>    
+                  </div>
+                </div>
+              </div>
               <div id="project-details">
                 <div class="subheader-text">the Southern Service</div>
                 <div class="project-details-content">
