construct additional pylons

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -360,20 +360,20 @@ because ideas are just more excuses to separate I from I.
                   <div class="body-text">
                   <pre>
 As we release what came before
-here shines a light that's bright and pure
-in present mind we are serene
-in the embrace of the moon's gleam
-we see, at last, what we had missed
-to understand is to forgive
-release, it's past, no changing it
-nothing as clear by day than now
-in dark of night and the moon's glow
-had we thought or had we felt
+here shines a light that's bright and pure.
+In present mind we are serene
+in the embrace of the moon's gleam.
+We see, at last, what we had missed:
+to understand is to forgive.
+Release, it's past, no changing it.
+Nothing as clear by day than now
+in dark of night and the moon's glow.
+Had we thought or had we felt
 as we do now we would have dealt
 much better with the problems that
-caused trouble with whom we had a spat
-goodbye dear problems you cannot stay
-just float and waft and fly away
+caused trouble with whom we had a spat.
+Goodbye dear problems you cannot stay
+just float and waft and fly away.
                     </pre>    
                   </div>
                 </div>
@@ -399,6 +399,69 @@ we end up in a curbside row
 such is my former home, I called it so		
 until I moved four years ago
                     </pre>		
+                  </div>
+                </div>
+              </div>
+                <div class="subheader-text">You must construct additional Pylons.</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+
+The energy cost of assembling is so low that 10,000 people just came to
+the same place, to live for a week in harmony with their ethics. Each
+externalising the internal functions of the individual by making
+resilient infrastructure, lets call them spider webs. This is possible
+because they are from the same family, the same tribe.
+
+We can and do hack ourselves, each other and the world to make us and it
+better: taking what is, improving upon it and sharing it.
+
+We need community.
+
+We need to create, it is in our DNA.
+
+The vibe engineers setup additional pylons to maintain a chaos magic
+interference field, our firewall and magnetic field to shield us from
+the radiation of the universe. Together we create an impulse that
+travels across the cosmos, intelligent life is out there. You cannot
+stop the signal. We are excellent to each other, it feels right.
+We focus on that fine feeling and our souls sing
+Safe in the embrace of the post-scarcity and the multiple layers of giving,
+support and care that allow us to unwrap, to be vulnerable.
+For you see, we are family and we are at home.
+
+The experience designers plan the space so that we feel safe to put down
+broad and deep roots, to be centred and comfortable to show our inner
+light, everyone has an inner child inside waiting to come out and play
+and they do. There is a sweet spirit in this place.
+
+Like companion plants we represent and generate synergies because each
+person is needed and each person is a reason: each producing what the
+other needs and consuming what the other doesn't need. No mud, no lotus.
+
+Call it symbiosis because we are an eco-system and a process the
+universe is doing. Energy cannot be created or destroyed, only transformed.
+
+Creative problem solvers, empathic engineers, writers, painters,
+photographers, dancers, poets, empaths, dreamers, human beings, mothers,
+hackers, we are the channellers of these frequencies with a sacred
+responsibility to uplift the consciousness of the entire, fucking,
+world. Specialisation is for insects. Doing more with less whilst
+designing for better not more.
+
+Lets share that essential freedom: the freedom to be ourselves.
+
+Lets harmoniously meet everyone's basic needs. It is the critical path.
+Then we can all share our inner light with a light heart and playful
+spirit because we are the people we have been waiting for. Let's shine
+bright while we build this machine whilst letting it build us. Let's
+learn how to drive spaceship earth properly and burn so bright and blaze
+across the universe and take all life into the stars, back home: don't
+you want to be, part of the machine, burning bright to be, the spark
+ignites the light behind your eyes.
+
+But to bring everyone with us, we need to construct additional pylons.
+                    </pre>    
                   </div>
                 </div>
               </div>
