lets build our home

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -349,11 +349,45 @@ because ideas are just more excuses to separate I from I.
                   <div class="body-text">
                   <pre>
                     Blood moon, cycle change, lost in forest, feeling strange.
+                  </pre>
                   </div>
                 </div>
               </div>
+              <div id="project-details">
+                <div class="subheader-text">Let's Build our Home</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+Fresh off of the conveyerbelt of the factory floor,
+I started my journey on and under fire,
+no doubt like you and others prior.
 
+But I have it already and you are me and I am you, we all are one.
+Community triumphs and emerges yet again,
+higher and higher and we start to see each other,
+eyes networking in the room,
+empathy extending our senses as we learn the magical skills that we had forgotten
+because we have been separated for too long.
+But when we come together, our collective intelligence,
+the unconscious knows, it remembers.
+So we start to feel the magic.
+I feel warm, I feel love. This thing of love is the magic part, it makes
+the cold universe warm.
+Hello family, I see you now and I love you. Might I propose a collective
+call to action?
 
+Let's, with tender love and kindness and with the best intentions asking
+for forgiveness not permission, start some more fires. Let's understand
+what 'is' in order to transform it into what our hearts it can be: the
+highest possible future- the global maximum for self, other and nature.
+
+Since we are of star-light, let's travel back home to the source of that
+light and all life and fill up the dark skies all over the universe with
+that light- a universe teeming with life and love is warm, it is home.
+                  </pre> 
+                  </div>
+                </div>
+              </div>
               <div id="project-details">
                 <div class="subheader-text">Full Moon: Release</div>
                 <div class="project-details-content">
