added an interview with krishnamurti to readings and minor corrections to writings

--- a/project-pages/project-writings.html
+++ b/project-pages/project-writings.html
@@ -125,7 +125,7 @@ analysis I discover that the rock has some iron deposits inside it, iron being o
 of stars above a certain size, then both the rock and I are children of the same type of star, which
 is to say we are made up of some of the same stardust, suddenly the rock itself and the entire context
 in which I found it take on a radically new significance: the type and degree of representations that
-I can make about increases so much that I feel a degree of empathy towards it accompanied by mutual tolerance
+I can make about it increases so much that I feel a degree of empathy towards it accompanied by mutual tolerance
 and respect for the other living beings and how they came to be and be in that place.		
 Why should I interfere? Certainly not because of our differing forms,
 relative sizes and subtle or more apparent natures!
@@ -440,7 +440,6 @@ until I moved four years ago
                 <div class="project-details-content">
                   <div class="body-text">
                   <pre>
-
 The energy cost of assembling is so low that 10,000 people just came to
 the same place, to live for a week in harmony with their ethics. Each
 externalising the internal functions of the individual by making
