changed the image urls for readings and writings on index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </a>
             </div>
             <div class="project-card">
-              <img src="./assets/images/writings.jpg" class="project-image">
+              <img src="./assets/images/20140726_175001.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Writings</div>
                 <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind.</div>
@@ -103,7 +103,7 @@
               </a>
             </div>            
             <div class="project-card">
-              <img src="./assets/images/readings.jpg" class="project-image">
+              <img src="./assets/images/20140726_175001.jpg" class="project-image">
               <div class="project-card-text-container">
                 <div class="subheader-text project-title">Readings</div>
                 <div class="body-text project-card-text">The thoughts of others, encoded in words, are shared here</div>
