--- a/project-pages/project-readings.html
+++ b/project-pages/project-readings.html
@@ -89,14 +89,13 @@ Word are sometimes. Prison sometimes prisms from the way you look"
 
 
               </div>
-              <div class="subheader-text">"Think Like They Book Say"</div>
+              <div class="subheader-text">Discussion between Krishnamurti and Michael Mendizza</div>
               <div class="project-details-content">
                 <div class="body-text">
 
 <pre>
-Krishnamurti with Michael Mendizza
 
-M The world crisis is unquestionably growing more and more acute. You have said that the outer crisis, in society and the world, reflects an inner crisis in human consciousness. What do you mean by that?
+M: The world crisis is unquestionably growing more and more acute. You have said that the outer crisis, in society and the world, reflects an inner crisis in human consciousness. What do you mean by that?
 
 K: I think that is fairly clear. The psychological content of consciousness of man is almost universal. The content of one’s consciousness is greatly similar to all other consciousness of mankind.  In that consciousness man suffers, goes through a great deal of agony, conflict and depression and elation.  He has enumerable beliefs, great many images about himself and about others. There is fear and the pursuit of pleasure. And there are the various types of religious divisions with their superstitions, illusions, saviors, and all that.  That is the content of one’s consciousness which is really the content of humanity.  Because all humanity, whether it is in the East or West, in Africa, Russia, or wherever it is, human beings go through this crisis in consciousness.
 
