added a stub about the ecolvillage and ucl occupation

--- a/project-pages/project-ecovillage.html
+++ b/project-pages/project-ecovillage.html
@@ -34,9 +34,9 @@
       <!-- PROJECT HEADER -->
       <div id="project-header">
 
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <div class="main-title">Ecovillage</div>
+        <div class="body-text">Imagine living on the top of a hill in a garden full of food, herbs and other useful and beautiful species situated in a forest (and you are allowed to sleep there). Welcome to Ecovillage life.</div>
+        <image class="project-header-image" src="../assets/images/SAMBiOtechie.png">
       </div>
 
 
